codecrafters submit [skip ci]

--- a/package.json
+++ b/package.json
@@ -2,5 +2,10 @@
   "name": "@codecrafters/kafka",
   "version": "1.0.0",
   "type": "module",
-  "dependencies": {}
+  "dependencies": {},
+  "scripts": {
+    "run_local": "node ./app/main.js",
+    "test": "codecrafters test",
+    "submit": "codecrafters submit"
+  }
 }
